tests/paczka1/fuzzy1/10685800.err
Error in line 1: S563 S361 6,9
Error in line 2: S563 S563 47,5
Error in line 9: 5bOEl S361 0,8
Error in line 13: 5bOEl A531 29,8
Error in line 11: S563 A99 19,1
Error in line 4: fRYIaFxdgh S563 18,4
Error in line 28: fRYIaFxdgh A99 25,9
